[package]
name = "pi_p2p"
version = "0.1.0"
authors = ["luob <luob@yineng.com>"]

[dependencies]
fnv = "1.0.6"
mqtt = {path = "../pi_net/mqtt"}
mqtt3 = { git = "https://github.com/tekjar/mqtt3" }
rpc = {path = "../pi_net/rpc"}
net = {path = "../pi_net/net"}
pi_lib = {path="../pi_lib"}
serde_json = "1.0.22"
rand = "0.5.3"