[package]
name = "pi_p2p"
version = "0.1.0"
authors = ["luob <luob@yineng.com>"]

[dependencies]
fnv = "1.0.6"
mqtt = {path = "../pi_net/mqtt"}
mqtt3 = { git = "https://github.com/tekjar/mqtt3" }
rpc = {path = "../pi_net/rpc"}
net = {path = "../pi_net/net"}
handler = {path = "../pi_lib/handler"}
gray = {path = "../pi_lib/gray"}
atom = {path = "../pi_lib/atom"}
serde_json = "1.0.22"
rand = "0.5.3"